# safe_terminal

./: README.md  docker-compose.yml
backend/: pom.xml
backend/src/main/java/com/safeterminal/: SafeTerminalApplication.java
backend/src/main/java/com/safeterminal/config/: EsIndexNameResolver.java  InfluxDBConfig.java  KafkaConfig.java
backend/src/main/java/com/safeterminal/controller/: AlertController.java  AuthController.java  EventSearchController.java  MetricsController.java  PolicyController.java  StatsController.java  TerminalController.java
backend/src/main/java/com/safeterminal/domain/document/: LogDocument.java  UsbEventDocument.java
backend/src/main/java/com/safeterminal/domain/entity/: Alert.java  Policy.java  SysUser.java  Terminal.java
backend/src/main/java/com/safeterminal/kafka/: HeartbeatConsumer.java  LogConsumer.java  UsbEventConsumer.java
backend/src/main/java/com/safeterminal/repository/: AlertRepository.java  PolicyRepository.java  SysUserRepository.java  TerminalRepository.java
backend/src/main/java/com/safeterminal/security/: JwtAuthFilter.java  JwtProperties.java  JwtTokenProvider.java  SecurityConfig.java  UserDetailsServiceImpl.java
backend/src/main/java/com/safeterminal/service/: AlertRuleEngine.java  InfluxQueryService.java  LogIndexService.java  PolicyService.java  StatsService.java  TerminalService.java  UsbEventService.java
backend/src/main/java/com/safeterminal/websocket/: AlertWebSocketPublisher.java  WebSocketConfig.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/: init.sql
client/: CMakeLists.txt  config.toml
client/config/: config.toml.template
client/packaging/: LICENSE.txt  PACKAGING.md
client/packaging/linux/: postinst  postrm  prerm  st-agent.service
client/packaging/windows/: install-service.bat  installer.nsi  uninstall-service.bat
client/src/: main.cpp
client/src/config/: Config.cpp  Config.h
client/src/probe/: HeartbeatReporter.cpp  HeartbeatReporter.h  PolicyManager.cpp  PolicyManager.h  SystemLogCollector.cpp  SystemLogCollector.h  UsbMonitor.cpp  UsbMonitor.h
client/src/transport/: GrpcClient.cpp  GrpcClient.h  RingBuffer.cpp  RingBuffer.h
docs/: DEPLOYMENT.md  DEVELOPMENT_NEXT_STEPS.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: alert.ts  http.ts  policy.ts  stats.ts  terminal.ts
frontend/src/components/: TerminalDetailDrawer.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: alertStore.ts  userStore.ts
frontend/src/views/: AlertCenterView.vue  DashboardView.vue  EventSearchView.vue  LoginView.vue  PolicyConfigView.vue  TerminalDetailView.vue  TerminalListView.vue
gateway/: go.mod  main.go
gateway/config/: config.go  config.toml
gateway/internal/grpc/: server.go
gateway/internal/kafka/: producer.go
gateway/internal/metrics/: metrics.go
gateway/internal/redis/: client.go
proto/: terminal.proto
scripts/: build_linux_package.sh  build_windows_installer.ps1
